# llt_gpgpu_rt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  llt_gpgpu_rt_config.h.in  todo.rst
cmake/: LltGpgpuRtConfig.cmake.in  macros.cmake
include/: CMakeLists.txt
include/llt_gpgpu_rt/: i915_compiled_program.h  i915_device.h  i915_runtime.h  ocl_runtime.h  version.h.in
scripts/: README.rst  copy_from_compute_runtime.sh.old
src/: CMakeLists.txt  bitfield.h  device_registry.cc  device_registry.h  drm_interface.cc  drm_interface.h  gpu_issue_test.cc  hash.cc  hw_cmds.cc  hw_cmds.h  hw_info.h  kernel.cc  kernel.h  utility.cc  utility.h
src/compiler/: CMakeLists.txt  igc_interface.cc  igc_interface.h  standalone_compiler.cc
src/demo/: CMakeLists.txt  i915_memset.cc  i915_memset.cl  i915_memset_online_compiled.cc  i915_memset_slm.cc  i915_memset_slm.cl  i915_xcb_display.cc  i915_xcb_display.cl  i915_xcb_gradients.cc  i915_xcb_gradients.cl  utils.h
src/ocl_runtime/: CMakeLists.txt  ocl_runtime.cc  ocl_runtime.h
src/ocl_runtime/i915/: CMakeLists.txt  ensure_types.h  hash.h  i915_compiled_program.cc  i915_compiled_program.h  i915_device_translate.cc  i915_device_translate.h  i915_kernel_utils.cc  i915_kernel_utils.h  i915_runtime.cc  i915_runtime.h  i915_runtime_impl.h  i915_utils.cc  i915_utils.h  igc_progbin.cc  igc_progbin.h  macros.h  utils.cc  utils.h
src/ocl_runtime/i915/compiler/: CMakeLists.txt  igc_interface.cc  igc_interface.h  llt_gpgpu_rt_i915_c.cc  offline_device_info.cc  offline_device_info.h  translate_interfaces.cc  translate_interfaces.h
tools/: generate_gen_headers.py
